--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,10 @@
   "name": "ocr-system-frontend",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vaibhavchauhan-15/OCR-System---Image-to-Text-Generator-"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
