--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.16",
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "next": "13.4.2",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "axios": "^1.4.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
-    "tailwindcss": "^3.3.2",
-    "postcss": "^8.4.23",
-    "autoprefixer": "^10.4.14",
-    "@tailwindcss/forms": "^0.5.3",
-    "@headlessui/react": "^1.7.14"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@types/node": "^20.1.3",
