--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
+    "critters": "^0.0.23",
     "next": "13.4.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,6 +29,7 @@
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.5.0",
     "@types/node": "^20.1.3",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
